# OpenGL-2D-Render

./: CMakeLists.txt  cubeData.h  main.cpp
Camera/: Camera.cpp  Camera.hpp
CameraMover/: CameraMover.cpp  CameraMover.hpp
Loader/: Loader.cpp  Loader.hpp
Resources/Shaders/: FragShader.glsl  LightSourceFrag.glsl  LightSourceVert.glsl  VertShader.glsl
ResourcesLoader/: Loader.cpp  Loader.hpp
RuntimeColorChoise/: ColorChoise.hpp
Scripts/CameraMover/: CameraMover.hpp
Scripts/Loader/: Loader.hpp
Scripts/RuntimeColorChoise/: ColorChoise.cpp  ColorChoise.hpp
Shader/: Shader.cpp  Shader.hpp
SkyGraph/assets/Shaders/Lit/: FragShader.glsl
SkyGraph/assets/Shaders/Unlit/: UnlitFragShader.glsl  UnlitVertShader.glsl
SkyGraph/include/: Shader.hpp  SkyGraph.hpp  Texture.hpp
SkyGraph/src/: Camera.cpp  Shader.cpp
Texture/: Texture.cpp  Texture.hpp
Transformable/: Transformable.cpp  Transformable.hpp
include/: Camera.hpp  Material-struct.hpp  Shader.hpp
src/: Texture.cpp  Transformable.cpp
